--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: none;
   text-decoration: none;
   list-style: none;
   font-family: $font-stack;
