--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import "variables";
+@import 'variables';
 
 * {
   margin: 0;
@@ -11,5 +11,5 @@
 }
 
 body {
-    background: $background-color;
+  background: $background-color;
 }
