--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-$background-color: #f5f5f5;
+$background-color: #f4f4f4;
+$primary-color: #dc3545;
 $secondary-color: #ebac34;
 $white-color: #fff;
 $text-color: #666464;
-$asroon-color: #de2d26;
-$dark-color: #1e1b1b;
+$dark-color: #333333;
 
 $font-stack: 'Roboto', sans-serif;
