--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -1,7 +1,7 @@
 @import '../../variables';
 
 .navbar {
-  background: $asroon-color;
+  background: $primary-color;
   padding: 24px;
   display: flex;
   justify-content: space-between;
